introduction et but

--- a/references.bib
+++ b/references.bib
@@ -1,1 +1,58 @@
 % Votre bibliographie au format bibtex ici...
+
+@misc{benoit2023,
+	title = {FishPass Sortable Attribute Database: Phenological, morphological, physiological, and behavioural characteristics related to passage and movement of Great Lakes fishes},
+	author = {Benoit, David and Zielinski, Dan and Swanson, Reid and McLaughlin, Robert and Castro-Santos, Theodore and Goodwin, Andrew and Pratt, Thomas and Muir, Andrew},
+	year = {2023},
+	month = {11},
+	date = {2023-11-01},
+	publisher = {Dryad},
+	doi = {10.5061/DRYAD.FQZ612JWJ},
+	url = {https://datadryad.org/dataset/doi:10.5061/dryad.fqz612jwj},
+	langid = {en}
+}
+
+@article{webb1984,
+	title = {Body Form, Locomotion and Foraging in Aquatic Vertebrates},
+	author = {WEBB, P. W.},
+	year = {1984},
+	month = {02},
+	date = {1984-02},
+	journal = {American Zoologist},
+	pages = {107--120},
+	volume = {24},
+	number = {1},
+	doi = {10.1093/icb/24.1.107},
+	url = {http://dx.doi.org/10.1093/icb/24.1.107},
+	langid = {en}
+}
+
+@article{fulton2005,
+	title = {Wave energy and swimming performance shape coral reef fish assemblages},
+	author = {Fulton, C.J and Bellwood, D.R and Wainwright, P.C},
+	year = {2005},
+	month = {04},
+	date = {2005-04-22},
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	pages = {827--832},
+	volume = {272},
+	number = {1565},
+	doi = {10.1098/rspb.2004.3029},
+	url = {http://dx.doi.org/10.1098/rspb.2004.3029},
+	langid = {en}
+}
+
+@article{hoare2000,
+	title = {Body size and shoaling in fish},
+	author = {Hoare, D. J. and Krause, J. and Peuhkuri, N. and Godin, {J.{-}G. J.}},
+	year = {2000},
+	month = {12},
+	date = {2000-12},
+	journal = {Journal of Fish Biology},
+	pages = {1351--1366},
+	volume = {57},
+	number = {6},
+	doi = {10.1111/j.1095-8649.2000.tb02217.x},
+	url = {http://dx.doi.org/10.1111/j.1095-8649.2000.tb02217.x},
+	langid = {en}
+}
