--- a/models_notebook.qmd
+++ b/models_notebook.qmd
@@ -21,19 +21,18 @@ bibliography: references.bib
 
 <!--% Rédigez une courte introduction de 3 ou 5 phrases qui présente vos données. Ajoutez une phrase de but (que vous remanierez éventuellement en fonction des modèles que vous ajouterez plus tard). Vous pouvez citer la bibliographie en utilisant le formatage Markdown ad hoc et en incluant votre référence au format bibtex dans le fichier references.bib. -->
 
-Les poissons des Grands Lacs présentent une grande diversité de morphologies et de comportements, qui influencent leur capacité à se déplacer dans leur environnement et à franchir des obstacles tels que barrages, passes à poissons ou variations de débit. L’ensemble de ces caractéristiques peut conditionner leur performance de nage et donc leurs chances de migration et de survie.
+Les poissons des Grands Lacs présentent une grande diversité de morphologies et de comportements, qui influencent leur capacité à se déplacer dans leur environnement et à franchir des obstacles tels que barrages, passes à poissons ou variations de débit. Ces caractéristiques conditionnent leur performance de nage et leurs chances de migration et de survie.
 
-Dans ce travail, nous utilisons les données du *FishPass Sortable Attribute Database* (Benoit *et al.*, 2023) qui regroupent des traits morphologiques (par ex. longueur maximale, forme du corps, taille et position des nageoires) ainsi que des traits comportementaux (position verticale dans la colonne d'eau, comportement de banc).
+Pour ce projet, les données de la **FishPass Sortable Attribute Database** [@benoit2023], regroupant des traits morphologiques (longueur maximale, forme du corps, taille et position des nageoires) et comportementaux (position verticale dans la colonne d'eau, comportement de banc) sont utilisées.
 
-**But** :
-
-Le but de ce projet est de mieux comprendre comment certains traits physiques des poissons sont liés à leur façon de se déplacer et de se comporter. On cherche surtout à voir si des caractéristiques comme la longueur, la forme du corps ou la taille des nageoires peuvent influencer leur comportement de banc ou leur position dans la colonne d’eau. Pour cela, on combine des graphiques, des analyses descriptives et quelques modèles statistiques afin d’identifier les traits qui semblent vraiment jouer un rôle. L’idée est simplement d’avoir une vue d’ensemble des liens entre morphologie et comportement chez les poissons étudiés.
+\
+L’objectif est de mieux comprendre comment certains traits morphologiques influencent la position verticale dans la colonne d’eau et le comportement de banc. Pour cela, nous combinons des analyses descriptives, des graphiques et quelques modèles statistiques afin d’identifier les traits qui jouent un rôle clé dans les stratégies de déplacement des poissons.
 
 ## Matériel et méthodes
 
 <!--% Indiquez ici d'où viennent les données et aussi quel logiciel (et version) vous utilisez pour les analyses. Inspirez-vous des projets du premier module de SDD II. -->
 
-Les données utilisées proviennent de la base FishPass Morphology et de la base FishPass Behaviour compilées par Benoit et al. (2023, DOI: <https://doi.org/10.5061/dryad.fqz612jwj>). Les deux bases ont été fusionnées par espèce (Order, Family, Genus, Scientific.Name, Common.Name), ce qui a permis d’obtenir un jeu unique intégrant à la fois des mesures morphologiques et des informations comportementales pour chaque espèce. Pour ce projet, seules les variables morphologiques et comportementales les plus pertinentes ont été retenues : longueur maximale, profondeur du corps, rapport d’aspect, étroitesse du pédoncule caudal, position et taille des nageoires pectorales, position verticale et taille de l’œil, forme du corps et comportement de banc.
+Les données utilisées proviennent de la base FishPass Morphology et de la base FishPass Behaviour compilées par [@benoit2023]. Les deux bases ont été fusionnées par espèce (Order, Family, Genus, Scientific.Name, Common.Name), ce qui a permis d’obtenir un jeu unique intégrant à la fois des mesures morphologiques et des informations comportementales pour chaque espèce. Pour ce projet, seules les variables morphologiques et comportementales les plus pertinentes ont été retenues : longueur maximale, profondeur du corps, rapport d’aspect, étroitesse du pédoncule caudal, position et taille des nageoires pectorales, position verticale et taille de l’œil, forme du corps et comportement de banc.
 
 Les données ont été nettoyées et harmonisées : renommage des colonnes, conversion des variables numériques, suppression des lignes avec valeurs manquantes et ajout de labels et unités. Afin d’assurer une représentativité statistique suffisante, seuls les ordres présentant un effectif ≥ 10 individus ont été conservés. Les ordres retenus pour les analyses sont *Cypriniformes, Perciformes et Salmoniformes.* Les autres ordres, comportant trop peu d’observations, ont été exclus pour garantir la robustesse des résultats.
 
@@ -267,6 +266,12 @@ Les premiers modèles présentent plusieurs limites. Le modèle initial sans int
 Fish_lm1 <- lm(data = Fish_data, 
                subset = Vertical_station %in% c("pelagic", "benthopelagic"), log(Longueur_max) ~ Taille_oeil + Vertical_station )  
 summary_(Fish_lm1) |> tabularise()
+
+Fish_sub <- subset(Fish_data,
+                   Vertical_station %in% c("pelagic", "benthopelagic"))
+chart(data = Fish_sub, log(Longueur_max) ~ Taille_oeil %col=% Vertical_station) +
+  geom_point() +
+  stat_smooth(method = "lm", formula = y ~ x)
 ```
 
 ```{r analyse residus lm1}
@@ -424,6 +429,8 @@ Le modèle s’ajuste bien aux données (pas de surdispersion), et tous les para
 #### Modèles linéaires
 
 Les deux modèles linéaires n’étant pas directement comparables par AIC, en raison de différences dans les variables explicatives et les niveaux retenus, ils seront comparés via le R² ajusté, la significativité des coefficients et la pertinence biologique. En comparant les deux modèles linéaires, le modèle linéaire 1 avec transformation logarithmique de la variable Longueur_max présente le meilleur compromis entre ajustement statistique et pertinence biologique. Il explique une proportion plus élevée de la variance (R² ajusté = 0.630), ses résidus sont homogènes et approximativement normaux, et toutes les variables retenues sont significatives. En revanche, le second modèle (Fish_lm2) présente un R² ajusté plus faible (0.498) et des résidus influencés par quelques observations extrêmes, ce qui limite sa robustesse. Ainsi, Fish_lm1 constitue le modèle le plus pertinent pour interpréter les relations entre traits morphologiques et position verticale chez les poissons.
+
+Du point de vue biologique et au regard de l’objectif de l’étude, le modèle expliquant la longueur maximale des poissons apparaît comme le plus central. La taille corporelle constitue un trait morphologique intégrateur étroitement lié aux stratégies de nage et à l’occupation de la colonne d’eau. Les effets observés de la taille de l’œil et de la position verticale traduisent des contraintes fonctionnelles cohérentes avec l’écologie des espèces. Le second modèle, centré sur la taille de l’œil, apporte un éclairage complémentaire sur l’influence du comportement de banc, mais joue un rôle secondaire dans l’interprétation globale.
 
 #### Modèle linéaire généralisé
 
