--- a/models_notebook.qmd
+++ b/models_notebook.qmd
@@ -424,21 +424,11 @@ Le modèle s’ajuste bien aux données (pas de surdispersion), et tous les para
 
 ### Comparaison des modèles et choix des modèles finaux
 
-#### Régressions linéaires
+Les six modèles testés explorent différentes relations entre traits morphologiques, écologiques et comportementaux chez les poissons. Les modèles linéaires simples (modèles 1 et 2) mettent en évidence des relations allométriques robustes entre la taille de l’œil et la longueur corporelle, mais restent limités par l’absence de variables écologiques ou comportementales. Le modèle 3, intégrant la position verticale dans la colonne d’eau et une transformation logarithmique de la longueur maximale, présente le meilleur compromis entre qualité d’ajustement (R² ajusté = 0.630), respect des hypothèses du modèle et pertinence biologique.
 
-Les deux modèles testés montrent une relation significative entre la taille du poisson et la taille de l’œil. Le modèle polynomial d’ordre 2 présente toutefois un R² ajusté légèrement plus élevé (0,536) que le modèle linéaire simple (0,521), indiquant un meilleur ajustement global
+Les modèles 4 à 6 intègrent explicitement le comportement de banc. Parmi eux, le modèle linéaire 4 souffre d’un pouvoir explicatif plus faible et de résidus influencés par des valeurs extrêmes. Les modèles linéaires généralisés permettent une approche plus directe de la prédiction du comportement. Le modèle 6 se distingue par le meilleur AIC et par une interaction biologiquement cohérente entre la taille corporelle et la taille des nageoires pectorales, traduisant des stratégies de nage collective.
 
-#### Modèles linéaires
-
-Les deux modèles linéaires n’étant pas directement comparables par AIC, en raison de différences dans les variables explicatives et les niveaux retenus, ils seront comparés via le R² ajusté, la significativité des coefficients et la pertinence biologique. En comparant les deux modèles linéaires, le modèle linéaire 1 avec transformation logarithmique de la variable Longueur_max présente le meilleur compromis entre ajustement statistique et pertinence biologique. Il explique une proportion plus élevée de la variance (R² ajusté = 0.630), ses résidus sont homogènes et approximativement normaux, et toutes les variables retenues sont significatives. En revanche, le second modèle (Fish_lm2) présente un R² ajusté plus faible (0.498) et des résidus influencés par quelques observations extrêmes, ce qui limite sa robustesse. Ainsi, Fish_lm1 constitue le modèle le plus pertinent pour interpréter les relations entre traits morphologiques et position verticale chez les poissons.
-
-Du point de vue biologique et au regard de l’objectif de l’étude, le modèle expliquant la longueur maximale des poissons apparaît comme le plus central. La taille corporelle constitue un trait morphologique intégrateur étroitement lié aux stratégies de nage et à l’occupation de la colonne d’eau. Les effets observés de la taille de l’œil et de la position verticale traduisent des contraintes fonctionnelles cohérentes avec l’écologie des espèces. Le second modèle, centré sur la taille de l’œil, apporte un éclairage complémentaire sur l’influence du comportement de banc, mais joue un rôle secondaire dans l’interprétation globale.
-
-#### Modèle linéaire généralisé
-
-```{r}
-
-```
+En conséquence, deux modèles complémentaires ont été retenus : ...
 
 ## Conclusion
 
