--- a/models_notebook.qmd
+++ b/models_notebook.qmd
@@ -324,7 +324,7 @@ chart$residuals(Fish_lm2)
 
 <!--% Élaborez un modèle linéaire généralisé ou mixte par paire d'étudiants dans cette section. -->
 
-```{r}
+```{r essaie glm1}
 #Fish_data$Forme_deep <- ifelse(Fish_data$Forme_corps == "short/deep", 1, 0)
 #Fish_glm1 <- lme4::glmer(data = Fish_data, Forme_deep ~ Rapport_aspect + Etroitesse_pedoncule + Vertical_station + (1 | Ordre), family = binomial())
 #summary(Fish_glm1)
@@ -427,6 +427,14 @@ Le modèle s’ajuste bien aux données (pas de surdispersion), et tous les para
 Les six modèles testés explorent différentes relations entre traits morphologiques, écologiques et comportementaux chez les poissons. Les modèles linéaires simples (modèles 1 et 2) mettent en évidence des relations allométriques robustes entre la taille de l’œil et la longueur corporelle, mais restent limités par l’absence de variables écologiques ou comportementales. Le modèle 3, intégrant la position verticale dans la colonne d’eau et une transformation logarithmique de la longueur maximale, présente le meilleur compromis entre qualité d’ajustement (R² ajusté = 0.630), respect des hypothèses du modèle et pertinence biologique.
 
 Les modèles 4 à 6 intègrent explicitement le comportement de banc. Parmi eux, le modèle linéaire 4 souffre d’un pouvoir explicatif plus faible et de résidus influencés par des valeurs extrêmes. Les modèles linéaires généralisés permettent une approche plus directe de la prédiction du comportement. Le modèle 6 se distingue par le meilleur AIC et par une interaction biologiquement cohérente entre la taille corporelle et la taille des nageoires pectorales, traduisant des stratégies de nage collective.
+
+```{r}
+# Comparaison AIC
+AIC(Fish_glm1, Fish_glm2)
+
+```
+
+Les deux modèles linéaires généralisés  analysent le comportement de banc à partir de variables morphologiques différentes et ne sont pas emboîtés, ce qui ne permet pas une comparaison par ANOVA. La comparaison a donc été réalisée à l’aide de l’AIC. Le modèle incluant le rapport d’aspect et la position verticale de l’œil(Fish_glm2) présente un AIC plus faible et des coefficients biologiquement cohérents, indiquant un meilleur compromis entre qualité d’ajustement et simplicité. Il est donc retenu comme le modèle le plus pertinent pour expliquer le comportement de banc.
 
 En conséquence, deux modèles complémentaires ont été retenus : ...
 
